--- a/src/views/login.html
+++ b/src/views/login.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/src/styles/login.css">
 </head>
 
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
@@ -39,7 +39,7 @@
     </main>
     </form>
     </main>
-    <script src="login.js"></script>
+    <script src="/src/assets/js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
