--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,10 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="index.css" />
-    <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="vh-100">
+    <!-- Navbar -->
     <div class="container-fluid">
         <div class="row vh-100">
             <nav class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
@@ -23,25 +24,25 @@
                 <div class="d-md-flex flex-column p-0 overflow-y-auto">
                     <ul class="nav nav-pills flex-column mb-auto fs-5 gap-2">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active text-white" aria-current="page">
+                            <a href="/src/views/index.html" class="nav-link active text-white" aria-current="page">
                                 <i class="fa-solid fa-house me-2" aria-hidden="true"></i>
                                 Inicio
                             </a>
                         </li>
                         <li>
-                            <a href="/maps/mapa.html" class="nav-link text-white link-body-emphasis">
+                            <a href="/src/views/mapa.html " class="nav-link text-white link-body-emphasis">
                                 <i class="fa-solid fa-map me-2" aria-hidden="true"></i>
                                 Mapa
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white link-body-emphasis">
+                            <a href="/src/views/estaciones.html" class="nav-link text-white link-body-emphasis">
                                 <i class="fa-solid fa-gas-pump me-2" aria-hidden="true"></i>
                                 Estaciones
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white link-body-emphasis">
+                            <a href="/src/views/settings.html" class="nav-link text-white link-body-emphasis">
                                 <i class="fa-solid fa-gear me-2" aria-hidden="true"></i>
                                 Ajustes
                             </a>
@@ -49,29 +50,35 @@
                     </ul>
                 </div>
             </nav>
+
+            <!-- Bottom navbar -->
             <nav class="navbar b-nav fixed-bottom d-md-none navbar-dark bg-body-tertiary d-flex justify-content-center">
                 <div class="p-0">
                     <ul class="nav">
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <a href="/src/views/index.html"
+                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-house" aria-hidden="true"></i>
                                 INICIO
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/maps/mapa.html" class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <a href="/src/views/mapa.html"
+                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-map" aria-hidden="true"></i>
                                 MAPA
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <a href="/src/views/estaciones.html"
+                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-gas-pump" aria-hidden="true"></i>
                                 ESTACIONES
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <a href="/src/views/settings.html"
+                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-gear" aria-hidden="true"></i>
                                 AJUSTES
                             </a>
@@ -79,6 +86,7 @@
                     </ul>
                 </div>
             </nav>
+
             <main class="col-md-8 p-0 col-lg-10">
                 <!-- Contenido principal -->
             </main>
