--- a/src/views/mapa.html
+++ b/src/views/mapa.html
@@ -18,6 +18,7 @@
 </head>
 
 <body class="vh-100">
+    <!-- Navbar -->
     <div class="container-fluid">
         <div class="row vh-100">
             <nav class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
@@ -28,25 +29,25 @@
                 <div class="d-md-flex flex-column p-0 overflow-y-auto">
                     <ul class="nav nav-pills flex-column mb-auto fs-5 gap-2">
                         <li class="nav-item">
-                            <a href="/landing/index.html" class="nav-link text-white" aria-current="page">
+                            <a href="/src/views/index.html" class="nav-link text-white" aria-current="page">
                                 <i class="fa-solid fa-house me-2" aria-hidden="true"></i>
                                 Inicio
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link active text-white link-body-emphasis">
+                            <a href="/src/views/mapa.html" class="nav-link active text-white link-body-emphasis">
                                 <i class="fa-solid fa-map me-2" aria-hidden="true"></i>
                                 Mapa
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white link-body-emphasis">
+                            <a href="/src/views/estaciones.html" class="nav-link text-white link-body-emphasis">
                                 <i class="fa-solid fa-gas-pump me-2" aria-hidden="true"></i>
                                 Estaciones
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link text-white link-body-emphasis">
+                            <a href="/src/views/settings.html" class="nav-link text-white link-body-emphasis">
                                 <i class="fa-solid fa-gear me-2" aria-hidden="true"></i>
                                 Ajustes
                             </a>
@@ -54,32 +55,33 @@
                     </ul>
                 </div>
             </nav>
+            <!-- Bottom navbar -->
             <nav class="navbar b-nav fixed-bottom d-md-none navbar-dark bg-body-tertiary d-flex justify-content-center">
                 <div class="p-0">
                     <ul class="nav">
                         <li class="nav-item">
-                            <a href="#"
+                            <a href="/src/views/index.html"
                                 class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-house" aria-hidden="true"></i>
                                 INICIO
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/maps/mapa.html"
+                            <a href="/src/views/mapa.html"
                                 class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-map" aria-hidden="true"></i>
                                 MAPA
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#"
+                            <a href="/src/views/estaciones.html"
                                 class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-gas-pump" aria-hidden="true"></i>
                                 ESTACIONES
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#"
+                            <a href="/src/views/settings.html"
                                 class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
                                 <i class="fa-solid fa-gear" aria-hidden="true"></i>
                                 AJUSTES
@@ -88,13 +90,13 @@
                     </ul>
                 </div>
             </nav>
+
+            <!-- Main -->
             <main class="col-md-8 p-0 col-lg-10">
                 <div id="map" style="height: 100vh;"></div>
             </main>
 
-            <footer>
-                <!-- place footer here -->
-            </footer>
+
             <!-- Bootstrap JavaScript Libraries -->
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
                 integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
