--- a/src/views/estaciones.html
+++ b/src/views/estaciones.html
@@ -24,7 +24,7 @@
                 <div class="d-md-flex flex-column p-0 overflow-y-auto">
                     <ul class="nav nav-pills flex-column mb-auto fs-5 gap-2">
                         <li class="nav-item">
-                            <a href="/src/views/index.html" class="nav-link active text-white" aria-current="page">
+                            <a href="/src/views/index.html" class="nav-link text-white" aria-current="page">
                                 <i class="fa-solid fa-house me-2" aria-hidden="true"></i>
                                 Inicio
                             </a>
@@ -36,7 +36,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/src/views/estaciones.html" class="nav-link text-white link-body-emphasis">
+                            <a href="/src/views/estaciones.html" class="nav-link active text-white link-body-emphasis">
                                 <i class="fa-solid fa-gas-pump me-2" aria-hidden="true"></i>
                                 Estaciones
                             </a>
