--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,7 +15,7 @@
 <body class="vh-100">
     <!-- Navbar -->
     <div class="container-fluid">
-        <div class="row vh-100">
+        <div class="row ">
             <nav class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <span class="fs-4">Empresa</span>
@@ -87,8 +87,27 @@
                 </div>
             </nav>
 
-            <main class="col-md-8 p-0 col-lg-10">
-                <!-- Contenido principal -->
+            <main class="col-md-8 p-0 col-lg-10 ">
+                <div class="text-center my-5">
+                    <h1>Precio de combustible en Formosa</h1>
+                </div>
+                <div class="rounded-5 bg-secondary-subtle w-75 h-25 mx-auto mb-5 d-flex align-items-center">
+                    <div class="">
+                        <img src="/src/assets/img/ypf.png" class="img-fluid w-25 ">
+                    </div>
+                    <div class=""></div>
+                </div>
+                <div class="rounded-5 bg-secondary-subtle w-75 h-25 mx-auto mb-5 d-flex align-items-center">
+                    <div class="">
+                        <img src="/src/assets/img/shell.png" class="img-fluid w-25 ">
+                    </div>
+                </div>
+                <div class="rounded-5 bg-secondary-subtle w-75 h-25 mx-auto mb-5 d-flex align-items-center">
+                    <div class="">
+                        <img src="/src/assets/img/axion.png" class="img-fluid w-25 ">
+                    </div>
+                </div>
+
             </main>
         </div>
     </div>
