--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,109 +8,174 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/src/styles/index.css" />
     <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.cdnfonts.com/css/lcd" rel="stylesheet">
+
 </head>
 
-<body class="vh-100">
-    <!-- Navbar -->
-    <div class="container-fluid">
-        <div class="row ">
-            <nav class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-4">Empresa</span>
-                </a>
-                <hr class="text-white">
-                <div class="d-md-flex flex-column p-0 overflow-y-auto">
-                    <ul class="nav nav-pills flex-column mb-auto fs-5 gap-2">
-                        <li class="nav-item">
-                            <a href="/src/views/index.html" class="nav-link active text-white" aria-current="page">
-                                <i class="fa-solid fa-house me-2" aria-hidden="true"></i>
-                                Inicio
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/src/views/mapa.html " class="nav-link text-white link-body-emphasis">
-                                <i class="fa-solid fa-map me-2" aria-hidden="true"></i>
-                                Mapa
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/src/views/estaciones.html" class="nav-link text-white link-body-emphasis">
-                                <i class="fa-solid fa-gas-pump me-2" aria-hidden="true"></i>
-                                Estaciones
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/src/views/settings.html" class="nav-link text-white link-body-emphasis">
-                                <i class="fa-solid fa-gear me-2" aria-hidden="true"></i>
-                                Ajustes
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+<body class="vh-100 container-fluid">
+
+    <div class="row m-0">
+        <!-- Navbar -->
+        <aside class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                <span class="fs-4">Empresa</span>
+            </a>
+            <hr class="text-white">
+            <nav class="d-md-flex flex-column p-0 overflow-y-auto">
+                <ul class="nav nav-pills flex-column mb-auto fs-5 gap-2">
+                    <li class="nav-item">
+                        <a href="/src/views/index.html" class="nav-link active text-white" aria-current="page">
+                            <i class="fa-solid fa-house me-2" aria-hidden="true"></i>
+                            Inicio
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/src/views/mapa.html" class="nav-link text-white link-body-emphasis">
+                            <i class="fa-solid fa-map me-2" aria-hidden="true"></i> Mapa
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/src/views/estaciones.html" class="nav-link text-white link-body-emphasis">
+                            <i class="fa-solid fa-gas-pump me-2" aria-hidden="true"></i>
+                            Estaciones
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/src/views/settings.html" class="nav-link text-white link-body-emphasis">
+                            <i class="fa-solid fa-gear me-2" aria-hidden="true"></i>
+                            Ajustes
+                        </a>
+                    </li>
+                </ul>
             </nav>
+        </aside>
 
-            <!-- Bottom navbar -->
-            <nav class="navbar b-nav fixed-bottom d-md-none navbar-dark bg-body-tertiary d-flex justify-content-center">
-                <div class="p-0">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a href="/src/views/index.html"
-                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
-                                <i class="fa-solid fa-house" aria-hidden="true"></i>
-                                INICIO
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/src/views/mapa.html"
-                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
-                                <i class="fa-solid fa-map" aria-hidden="true"></i>
-                                MAPA
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/src/views/estaciones.html"
-                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
-                                <i class="fa-solid fa-gas-pump" aria-hidden="true"></i>
-                                ESTACIONES
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/src/views/settings.html"
-                                class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
-                                <i class="fa-solid fa-gear" aria-hidden="true"></i>
-                                AJUSTES
-                            </a>
-                        </li>
-                    </ul>
+        <!-- Bottom navbar -->
+        <nav class="navbar b-nav fixed-bottom d-md-none navbar-dark bg-body-tertiary d-flex justify-content-center">
+            <div class="p-0">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a href="/src/views/index.html"
+                            class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <i class="fa-solid fa-house" aria-hidden="true"></i>
+                            INICIO
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/src/views/mapa.html"
+                            class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <i class="fa-solid fa-map" aria-hidden="true"></i>
+                            MAPA
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/src/views/estaciones.html"
+                            class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <i class="fa-solid fa-gas-pump" aria-hidden="true"></i>
+                            ESTACIONES
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/src/views/settings.html"
+                            class="nav-link d-flex align-items-center gap-2 flex-column text-center text-white">
+                            <i class="fa-solid fa-gear" aria-hidden="true"></i>
+                            AJUSTES
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Main -->
+        <main class="col-md-8 col-lg-10 offset-md-4 offset-lg-2 p-0 justify-content-center">
+            <div class="text-center my-4 lexend">
+                <h3>Precios actualizados en Formosa al 01/02/24</h3>
+            </div>
+            <!-- Cards -->
+            <div class="cards mb-5">
+                <div class="container-fluid mx-auto p-3 align-items-center d-flex flex-column gap-3 ">
+                    <div class="row w-50 mx-auto border rounded-5 p-3 shadow ">
+                        <div class="col-4 p-0 mx-auto my-auto">
+                            <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-8 ">
+                            <ul class="list-unstyled m-0 ">
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">SUPER $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">871</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">INFINIA $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">1059</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">DIESEL $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">925</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">INFINIA DIESEL $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">1098</P>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row w-50 mx-auto border rounded-5 p-3 shadow ">
+                        <div class="col-4 p-0 mx-auto my-auto">
+                            <img src="/src/assets/img/shell.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-8 ">
+                            <ul class="list-unstyled m-0 ">
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">SUPER $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">899</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">V-POWER $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">1089</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">EURO DIESEL $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">953</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">V-POWER DIESEL $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">1129</P>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row w-50 mx-auto border rounded-5 p-3 shadow ">
+                        <div class="col-4 p-0 mx-auto my-auto">
+                            <img src="/src/assets/img/axion2.png" class="img-fluid" alt="">
+                        </div>
+                        <div class="col-8 ">
+                            <ul class="list-unstyled m-0 ">
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">SUPER $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">899</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">QUANTIUM $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">1089</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">AXION DIESEL X10 $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">953</P>
+                                </li>
+                                <li class="d-flex justify-content-center">
+                                    <p class=" oswald">QUANTIUM DIESEL $</p>
+                                    <P class="lcd-font  mx-1 px-2 bg-black border ">1129</P>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-            </nav>
 
-            <main class="col-md-8 p-0 col-lg-10 ">
-                <div class="text-center my-5">
-                    <h1>Precio de combustible en Formosa</h1>
-                </div>
-                <div class="rounded-5 bg-secondary-subtle w-75 h-25 mx-auto mb-5 d-flex align-items-center">
-                    <div class="">
-                        <img src="/src/assets/img/ypf.png" class="img-fluid w-25 ">
-                    </div>
-                    <div class=""></div>
-                </div>
-                <div class="rounded-5 bg-secondary-subtle w-75 h-25 mx-auto mb-5 d-flex align-items-center">
-                    <div class="">
-                        <img src="/src/assets/img/shell.png" class="img-fluid w-25 ">
-                    </div>
-                </div>
-                <div class="rounded-5 bg-secondary-subtle w-75 h-25 mx-auto mb-5 d-flex align-items-center">
-                    <div class="">
-                        <img src="/src/assets/img/axion.png" class="img-fluid w-25 ">
-                    </div>
-                </div>
-
-            </main>
-        </div>
+            </div>
+        </main>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
