--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
         <!-- Navbar -->
         <aside class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                <span class="fs-4">Empresa</span>
+                <img src="/src/assets/img/logo.png" class="img-fluid w-50 mx-auto" alt="">
             </a>
             <hr class="text-white">
             <nav class="d-md-flex flex-column p-0 overflow-y-auto">
