--- a/src/views/login.html
+++ b/src/views/login.html
@@ -14,8 +14,8 @@
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
         <form id="formulario">
-            <h1 class="mb-4">LOGO</h1>
-            <h1 class="h3 mb-3 fw-normal">Por favor inicie sesión</h1>
+            <img src="/src/assets/img/logo.png" class="img-fluid w-50 mb-4 align-self-center " alt="">
+
             <div class="form-floating">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Correo electrónico</label>
@@ -33,7 +33,7 @@
             </div>
             <button class="btn btn-primary w-100 py-2" type="submit">Iniciar Sesión</button>
             <p class="mt-5 mb-3 text-center text-body-secondary">&copy; 2024</p>
-            <div id="alerts"></div>
+            <div id="alerts" class="mx-auto"></div>
         </form>
 
     </main>
