--- a/src/views/estaciones.html
+++ b/src/views/estaciones.html
@@ -8,7 +8,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/src/styles/index.css" />
+    <link rel="stylesheet" href="/src/styles/estaciones.css">
     <script src="https://kit.fontawesome.com/b9609ad0eb.js" crossorigin="anonymous"></script>
 </head>
 
@@ -18,7 +19,7 @@
         <div class="row vh-100">
             <nav class="sidebar col-md-4 col-lg-2 p-3 bg-body-tertiary d-md-block d-none">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-4">Empresa</span>
+                    <img src="/src/assets/img/logo.png" class="img-fluid w-50 mx-auto" alt="">
                 </a>
                 <hr class="text-white">
                 <div class="d-md-flex flex-column p-0 overflow-y-auto">
@@ -87,8 +88,238 @@
                 </div>
             </nav>
 
-            <main class="col-md-8 p-0 col-lg-10">
+            <main class="col-md-8 col-lg-10 offset-md-4 offset-lg-2 p-0 justify-content-center">
                 <!-- Contenido principal -->
+                <!-- Cards -->
+                <div class="cards mx-3 mb-5">
+                    <div class="container-fluid p-3 align-items-center d-flex flex-column gap-3 ">
+                        <div class="row justify-content-center gap-3">
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
+                                    <h6>Mariano Boedo</h6>
+                                    <h6>Formosa</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">871</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1059</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">925</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1098</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
+                                    <h6>Werning Combustible</h6>
+                                    <h6>RUTA NACIONAL 81</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">871</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1059</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">925</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1098</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center gap-3">
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
+                                    <h6>El Espinillo</h6>
+                                    <h6>Formosa</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">871</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1059</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">925</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1098</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/axion2.png" class="img-fluid" alt="">
+                                    <h6>AXION energy</h6>
+                                    <h6>Carlos Pellegrini 705</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">899</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">QUANTIUM $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1089</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">AXION DIESEL X10 $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">953</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">QUANTIUM DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1129</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center gap-3">
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/axion2.png" class="img-fluid" alt="">
+                                    <h6>AXION energy</h6>
+                                    <h6>Lopez y Planes y Saavedra, Ruta 3</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">899</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">QUANTIUM $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1089</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">AXION DIESEL X10 $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">953</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">QUANTIUM DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1129</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/ypf3.png" class="img-fluid" alt="">
+                                    <h6>M-M Petrol S.A.S</h6>
+                                    <h6>San Martín 2</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">871</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1059</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">925</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">INFINIA DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1098</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center gap-3">
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/shell.png" class="img-fluid" alt="">
+                                    <h6>Shell Formosa</h6>
+                                    <h6>Av. Dr. Nestor Kirchner 4315</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">899</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">V-POWER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1089</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">EURO DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">953</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">V-POWER DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1129</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="d-flex py-3 col-md-5 border rounded-5 h-75 shadow">
+                                <div class="col-4 text-center my-auto">
+                                    <img src="/src/assets/img/shell.png" class="img-fluid" alt="">
+                                    <h6>Shell La Estación S.A.</h6>
+                                    <h6>RN11 Km 1164</h6>
+                                </div>
+                                <div class="col-8 my-auto">
+                                    <ul class="list-unstyled m-0 ">
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">SUPER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">899</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">V-POWER $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1089</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">EURO DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">953</P>
+                                        </li>
+                                        <li class="d-flex justify-content-center">
+                                            <p class=" oswald">V-POWER DIESEL $</p>
+                                            <P class="lcd-font  mx-1 px-2 bg-black border ">1129</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </main>
         </div>
     </div>
